@@ -36,6 +36,7 @@ t/data/cnb000974260.mrc
 t/data/cnb001002340.mrc
 t/data/cnb001042253.mrc
 t/data/cnb001657758.mrc
+t/data/cnb001756719.xml
 t/data/cnb002181872.mrc
 t/data/cnb002276974.mrc
 t/data/cnb002341867.mrc
