@@ -1,0 +1,134 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<collection
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://www.loc.gov/MARC21/slim http://www.loc.gov/standards/marcxml/schema/MARC21slim.xsd"
+        xmlns="http://www.loc.gov/MARC21/slim">
+
+    <record>
+        <leader>01504nam a2200397 a 4500</leader>
+        <controlfield tag="001">nkc20071756719</controlfield>
+        <controlfield tag="003">CZ PrNK</controlfield>
+        <controlfield tag="005">20140620070539.0</controlfield>
+        <controlfield tag="007">ta</controlfield>
+        <controlfield tag="008">071001s2007    xr h   e p    000 0 cze  </controlfield>
+        <datafield tag="015" ind1=" " ind2=" ">
+            <subfield code="a">cnb001756719</subfield>
+        </datafield>
+        <datafield tag="020" ind1=" " ind2=" ">
+            <subfield code="a">978-80-7380-054-3</subfield>
+            <subfield code="q">(brož.)</subfield>
+        </datafield>
+        <datafield tag="035" ind1=" " ind2=" ">
+            <subfield code="a">(OCoLC)237064486</subfield>
+        </datafield>
+        <datafield tag="040" ind1=" " ind2=" ">
+            <subfield code="a">ABA001</subfield>
+            <subfield code="b">cze</subfield>
+            <subfield code="d">BOA001</subfield>
+        </datafield>
+        <datafield tag="041" ind1="1" ind2=" ">
+            <subfield code="a">cze</subfield>
+            <subfield code="a">lat</subfield>
+            <subfield code="h">lat</subfield>
+        </datafield>
+        <datafield tag="072" ind1=" " ind2="7">
+            <subfield code="a">34</subfield>
+            <subfield code="x">Právo</subfield>
+            <subfield code="2">Konspekt</subfield>
+            <subfield code="9">16</subfield>
+        </datafield>
+        <datafield tag="072" ind1=" " ind2="7">
+            <subfield code="a">37.016</subfield>
+            <subfield code="x">Učební osnovy. Vyučovací předměty. Učebnice</subfield>
+            <subfield code="2">Konspekt</subfield>
+            <subfield code="9">22</subfield>
+        </datafield>
+        <datafield tag="080" ind1=" " ind2=" ">
+            <subfield code="a">340.15</subfield>
+            <subfield code="2">MRF</subfield>
+        </datafield>
+        <datafield tag="080" ind1=" " ind2=" ">
+            <subfield code="a">(075)</subfield>
+            <subfield code="2">MRF</subfield>
+        </datafield>
+        <datafield tag="100" ind1="0" ind2=" ">
+            <subfield code="a">Gaius,</subfield>
+            <subfield code="d">činný 110-180</subfield>
+            <subfield code="7">jn19990002527</subfield>
+            <subfield code="4">aut</subfield>
+        </datafield>
+        <datafield tag="240" ind1="1" ind2="0">
+            <subfield code="a">Institutiones.</subfield>
+            <subfield code="l">Česky</subfield>
+            <subfield code="7">aun2007430027</subfield>
+        </datafield>
+        <datafield tag="245" ind1="1" ind2="0">
+            <subfield code="a">Učebnice práva ve čtyřech knihách /</subfield>
+            <subfield code="c">Gaius ; [překlad] Jaromír Kincl</subfield>
+        </datafield>
+        <datafield tag="246" ind1="3" ind2=" ">
+            <subfield code="a">Gaius: Učebnice práva ve čtyřech knihách</subfield>
+        </datafield>
+        <datafield tag="260" ind1=" " ind2=" ">
+            <subfield code="a">Plzeň :</subfield>
+            <subfield code="b">Vydavatelství a nakladatelství Aleš Čeněk,</subfield>
+            <subfield code="c">2007</subfield>
+        </datafield>
+        <datafield tag="300" ind1=" " ind2=" ">
+            <subfield code="a">326 s. :</subfield>
+            <subfield code="b">faksim. ;</subfield>
+            <subfield code="c">21 cm</subfield>
+        </datafield>
+        <datafield tag="546" ind1=" " ind2=" ">
+            <subfield code="a">Část. souběžný latinský text</subfield>
+        </datafield>
+        <datafield tag="600" ind1="0" ind2="7">
+            <subfield code="a">Gaius,</subfield>
+            <subfield code="d">činný 110-180.</subfield>
+            <subfield code="t">Institutiones</subfield>
+            <subfield code="7">aun2007417049</subfield>
+            <subfield code="2">czenas</subfield>
+        </datafield>
+        <datafield tag="650" ind1="0" ind2="7">
+            <subfield code="a">římské právo</subfield>
+            <subfield code="7">ph128319</subfield>
+            <subfield code="2">czenas</subfield>
+        </datafield>
+        <datafield tag="650" ind1="0" ind2="9">
+            <subfield code="a">Roman law</subfield>
+            <subfield code="2">eczenas</subfield>
+        </datafield>
+        <datafield tag="655" ind1=" " ind2="7">
+            <subfield code="a">učebnice</subfield>
+            <subfield code="7">fd133770</subfield>
+            <subfield code="2">czenas</subfield>
+        </datafield>
+        <datafield tag="655" ind1=" " ind2="9">
+            <subfield code="a">textbooks</subfield>
+            <subfield code="2">eczenas</subfield>
+        </datafield>
+        <datafield tag="700" ind1="1" ind2=" ">
+            <subfield code="a">Kincl, Jaromír,</subfield>
+            <subfield code="d">1926-1993</subfield>
+            <subfield code="7">jk01060171</subfield>
+            <subfield code="4">trl</subfield>
+            <subfield code="4">aui</subfield>
+        </datafield>
+        <datafield tag="856" ind1="4" ind2="1">
+            <subfield code="u">http://krameriusndk.nkp.cz/search/handle/uuid:eba82a60-4953-11e8-9a44-005056827e52</subfield>
+            <subfield code="y">Digitalizovaný dokument</subfield>
+        </datafield>
+        <datafield tag="901" ind1=" " ind2=" ">
+            <subfield code="b">9788073800543</subfield>
+            <subfield code="f">[1. vyd.]</subfield>
+            <subfield code="o">20080704</subfield>
+        </datafield>
+        <datafield tag="910" ind1=" " ind2=" ">
+            <subfield code="a">ABA001</subfield>
+        </datafield>
+        <datafield tag="998" ind1=" " ind2=" ">
+            <subfield code="a">001756719</subfield>
+        </datafield>
+    </record>
+
+</collection>
